force-app/main/default/objects/ProjectLineItem__c/ProjectLineItem__c.object-meta.xml
<CustomObject>
    <description>Information on the hours that should be covered</description>
    <label>ProjectsLineItem</label>
    <nameField>
        <label>ProjectLineItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProjectsLineItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>