force-app/main/default/objects/ProjectLineItem__c/fields/Covered__c.field-meta.xml
<CustomField>
    <fullName>Covered__c</fullName>
    <formula>QuantityHours__c  &gt;=  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Covered</label>
    <type>Checkbox</type>
</CustomField>