force-app/main/default/objects/ProjectLineItem__c/fields/QuantityHours__c.field-meta.xml
<CustomField>
    <fullName>QuantityHours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Covered hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>